8/28/13 #6, expand touch area for "Show values" check box
# 1.0.0 8/16/13
8/13/13 branch '1.0' created
# 0.0.0-10 7/30/13
7/30/13 randomize the location of particles whenever the solute is changed, #4
7/30/13 optimize performance of PrecipitateNode by creating one set of particles whose color and visibility is changed to match solute and precipitate amount, #4
7/30/13 convert particle size and number of particles-per-mole from properties of Solute to constants in PrecipitateNode, in preparation for performance optimization, #4
7/30/13 clean up PrecipitateNode, in preparation for performance optimization, #4
7/30/13 remove dependency of PrecipitateParticleNode on Solute, in preparation for performance optimization, #4
7/30/13 change Solute.particleSize to Solute.particleLength, since particles are square
7/30/13 make particleColor an option for Solute, not a constructor param
7/30/13 improve performance of concentration display by drawing arrow once and changing its y position, #4
7/30/13 improve performance of drawing solution by making more efficient use of shapes, #4
7/29/13 add google-analytics.js to html and package.json
7/29/13 add meta tags that are in chipper.sim.html
7/29/13 use English string as default <title>
7/29/13 pull change to scenery.SVGLayer that fixes beers-law-lab#20
# 0.0.0-9 7/26/13
7/26/13 fix up package.json to work with build.sh changes (chipper#12)
# 0.0.0-8 7/25/13
7/25/13 add a bit of space between left-edge of play area and the "Solute Amount" slider
7/25/13 increase width of play area so that concentration value doesn't fall off right edge when "Show values" is checked
# 0.0.0-7 7/23/13
7/23/13 fix range of Volume slider (bug introduced when making an unnecessary change to address a REVIEW comment)
# 0.0.0-6 7/22/13
7/22/13 create local ResetAllButton that uses images provided by SST
7/19/13 fix behavior for 'dev' query param
7/19/13 address REVIEW comments
7/19/13 delete placeholder icon for MolarityTab, fixed by joist#15