@@ -1,3 +1,4 @@
+9/5/12 smorgasbord#1, use namespace MOLARITY (for everything except MImage, which has some problem)
 8/28/13 #6, expand touch area for "Show values" check box
 # 1.0.0 8/16/13
 8/13/13 branch '1.0' created
